Sforce8 Project Data/src/objects/deposit__c.object
<CustomObject>
    <fields>
        <fullName>Dperson__c</fullName>
        <label>扱者</label>
        <referenceTo>Worker__c</referenceTo>
        <relationshipLabel>入金伝票</relationshipLabel>
        <relationshipName>depositC3TS</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Kamoku__c</fullName>
        <label>科目</label>
        <picklist>
            <picklistValues>
                <fullName>内金</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>予約金</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>両替金</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>売掛金</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reldeposit__c</fullName>
        <label>予約会計</label>
        <referenceTo>RsvAccount__c</referenceTo>
        <relationshipLabel>入金伝票</relationshipLabel>
        <relationshipName>depositYOKF</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>入金先</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>入金伝票</relationshipLabel>
        <relationshipName>depositjvy1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>depositamount__c</fullName>
        <label>金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>deposititem__c</fullName>
        <label>摘要</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>入金</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Deposit#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>